got rid of some commit errors

--- a/Django-Online-Judge/Django-Online-Judge/djangoproj/judge/templates/judge/index.html
+++ b/Django-Online-Judge/Django-Online-Judge/djangoproj/judge/templates/judge/index.html
@@ -18,7 +18,8 @@
     <h1>Welcome to the online judge</h1>
     <form>
         <button formaction="/problemset">Click here to practice</button>
-    </form>
+    </form>{% csrf_token %}
+
 </body>
 
 </html>
