--- a/Django-Online-Judge/Django-Online-Judge/djangoproj/judge/templates/judge/leaderboard.html
+++ b/Django-Online-Judge/Django-Online-Judge/djangoproj/judge/templates/judge/leaderboard.html
@@ -5,6 +5,10 @@
         body {
             background-color: #9EE3B4;
         }
+        .text{
+          text-decoration: none;
+        }
+
 
         #submissions {
             font-family: Arial, Helvetica, sans-serif;
@@ -36,13 +40,28 @@
             background-color: #04AA6D;
             color: white;
         }
+        .working-btn {
+       background-color: #ddd;
+       border: none;
+       color: black;
+       padding: 10px 20px;
+       text-align: center;
+       font-size: 16px;
+       margin: 4px 2px;
+       transition: 0.3s;
+     }
+
+     .working-btn:hover {
+       background-color: #3e8e41;
+       color: white;
+     }
     </style>
 </head>
 
 <body align='center'>
     <h1>Leaderboard</h1>
     <form>
-        <button formaction="/problemset">Return to problemset</button>
+        <button class="working-btn" formaction="/problemset">Return to problemset</button>
     </form>
     <table id="submissions">
         <thead>
@@ -56,7 +75,7 @@
             {% for res in result %}
             <tr>
                 <td>{{res.verdict}}</td>
-                <td><a href="{% url 'detail' res.problem.id %}">{{res.problem.code}}</a></td>
+                <td><a class="text" href="{% url 'detail' res.problem.id %}">{{res.problem.code}}</a></td>
                 <td>{{res.submittedAt}}</td>
             </tr>
             {% endfor %}
