--- a/Django-Online-Judge/Django-Online-Judge/djangoproj/judge/templates/judge/problems_list.html
+++ b/Django-Online-Judge/Django-Online-Judge/djangoproj/judge/templates/judge/problems_list.html
@@ -5,6 +5,24 @@
         body {
             background-color: #9EE3B4;
         }
+        .working-btn {
+       background-color: #ddd;
+       border: none;
+       color: black;
+       padding: 16px 32px;
+       text-align: center;
+       font-size: 16px;
+       margin: 4px 2px;
+       transition: 0.3s;
+     }
+
+     .working-btn:hover {
+       background-color: #3e8e41;
+       color: white;
+     }
+     .text{
+       text-decoration: none;
+     }
 
         #problems_list {
             font-family: Arial, Helvetica, sans-serif;
@@ -42,7 +60,7 @@
 <body align='center'>
     <h1>Problemset</h1>
     <form>
-        <button formaction="/leaderboard">View recent submissions</button>
+        <button class="working-btn" formaction="/leaderboard">View recent submissions</button>
     </form>
     <table id="problems_list">
         <thead>
@@ -56,7 +74,7 @@
             {% for problem in problemset %}
             <tr>
                 <td>{{problem.code}}</td>
-                <td><a href="{% url 'detail' problem.id %}">{{problem.name}}</a></td>
+                <td><a class="text" href="{% url 'detail' problem.id %}">{{problem.name}}</a></td>
                 <td>{{problem.difficulty}}</td>
             </tr>
             {% endfor %}
